--- a/android_o-starter/app/src/main/res/values/strings.xml
+++ b/android_o-starter/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="create">Create</string>
     <string name="cancel">cancel</string>
     <string name="delete_race">Delete Race</string>
+    <string name="change_runner">Change Runner</string>
+    <string name="change">Change</string>
 </resources>
