--- a/android_o-starter/app/src/main/res/values/strings.xml
+++ b/android_o-starter/app/src/main/res/values/strings.xml
@@ -33,11 +33,29 @@
     <string name="change_starttime">Change time of start</string>
     <string name="show_only_some_cat">Show only some categories</string>
     <string name="control">Control</string>
-    <string name="shoft_on_actual_time_automatically">Shift on actual time automatically</string>
+    <string name="shift_on_actual_time_automatically">Shift on actual time automatically</string>
     <string name="not_implemented">Not implemented</string>
     <string name="create">Create</string>
-    <string name="cancel">cancel</string>
+    <string name="cancel">Cancel</string>
     <string name="delete_race">Delete Race</string>
     <string name="change_runner">Change Runner</string>
     <string name="change">Change</string>
+    <string name="about_app_text">\nO-starter is developing by Vít Koštejn.\n\nIn case of issue, please contact me on v.kostejn.experimental@gmail.com</string>
+    <string name="ok">OK</string>
+    <string name="permission_denied">Permission Denied</string>
+    <string name="new_competition">New Competition</string>
+    <string name="invalid_data">Invalid data</string>
+    <string name="connection_failed">Server connection failed. \nTry to check internet connection</string>
+    <string name="delete_competition">Delete Competition</string>
+    <string name="really_delete_competition">Are you sure you want to delete this Competition?</string>
+    <string name="no">No</string>
+    <string name="add_new_competition">Add new Competition</string>
+    <string name="given_name">Given Name:</string>
+    <string name="family_name">Family Name:</string>
+    <string name="si_number">SI Number:</string>
+    <string name="start_number">Start Number:</string>
+    <string name="registration_id">Registration Id:</string>
+    <string name="load_startlists">Load StartLists</string>
+    <string name="the_support_format_is_iof_xml_v_3">(The support format is IOF XML v.3)</string>
+    <string name="close_competition">Close Competition</string>
 </resources>
