--- a/android_o-starter/app/src/main/res/values/strings.xml
+++ b/android_o-starter/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="close_competition">Close Competition</string>
     <string name="change_synchronisation_with_server">This competition is not synchronized with server. You can change it in settings</string>
     <string name="finish_competition">Finish Competition</string>
-    <string name="really_finish_competition">Are you really finish this competition?</string>
+    <string name="really_finish_competition">Are you really finish this competition? New list of unstarted runners will be created.</string>
     <string name="yes">Yes</string>
+    <string name="back_ask">Do you want to finish this competition? The list of unstarted runners will created.</string>
 </resources>
