--- a/android_o-starter/app/src/main/res/values/strings.xml
+++ b/android_o-starter/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="the_competition_has_not_finished_yet">The competition has not finished yet</string>
     <string name="finish">Finish</string>
     <string name="unstarted_failed">Contection failed. Please send data about unstarted runners to server later.</string>
+    <string name="view_changes_and_unstarted_runners">View Changes And Unstarted Runners</string>
 </resources>
