--- a/android_o-starter/app/src/main/res/values-cs/strings.xml
+++ b/android_o-starter/app/src/main/res/values-cs/strings.xml
@@ -64,4 +64,5 @@
     <string name="view_changes_and_unstarted_runners">Zobrazit změny a neodstartované závodníky</string>
     <string name="send_on_server_summary">Změny ve startovní listině budou poslány na server a bude je tam možné zobrazit.</string>
     <string name="change_event_name">Změnit název závodu</string>
+    <string name="no_si">Žádné SI</string>
 </resources>
